tests/baselines/reference/typeArgumentConstraintResolution1.errors.txt
==== tests/cases/compiler/typeArgumentConstraintResolution1.ts (2 errors) ====
    function foo1<T extends Date>(test: T);
    function foo1<T extends Number>(test: string);
    function foo1<T extends String>(test: any) { }
    foo1<Date>(""); // should error
         ~~~~
!!! error TS2343: Type 'Date' does not satisfy the constraint 'Number':
!!! error TS2343:   Property 'toFixed' is missing in type 'Date'.
    
    
    
    function foo2<T extends Date>(test: T): T;
    function foo2<T extends Number>(test: string): T; 
    function foo2<T extends String>(test: any): any { return null; }
    foo2<Date>(""); // Type Date does not satisfy the constraint 'Number' for type parameter 'T extends Number'
         ~~~~
!!! error TS2344: Type 'Date' does not satisfy the constraint 'Number'.
    